# Mayak

./: .gitignore  README.md  project_dump_all.ps1
apps/client/: README.md  collect_flutter_crash.ps1  pubspec.yaml
apps/client/android/: gradle.properties
apps/client/android/app/: build.gradle.kts
apps/client/ios/Runner/: Info.plist
apps/client/ios/Runner.xcodeproj/: project.pbxproj
apps/client/lib/: main.dart
apps/client/lib/app/: app.dart  theme.dart
apps/client/lib/controllers/: call_controller.dart
apps/client/lib/models/: app_models.dart  p2p_models.dart
apps/client/lib/screens/: add_friend_screen.dart  app_shell_screen.dart  call_screen.dart  chat_screen.dart  friends_screen.dart  home_screen.dart  incoming_call_screen.dart  onboarding_screen.dart  outgoing_call_screen.dart  profile_screen.dart
apps/client/lib/services/: api_service.dart  app_notification_service.dart  device_socket_service.dart  direct_message_queue_service.dart  local_message_store.dart  p2p_message_transport.dart  settings_repository.dart  signaling_service.dart  webrtc_service.dart
apps/client/lib/services/e2ee/: crypto_bridge.dart  crypto_models.dart  device_key_package_manager.dart  (+10 more)
apps/client/lib/widgets/: chat_panel.dart  glass_panel.dart  participant_tile.dart  section_header.dart
apps/client/test/: widget_test.dart
apps/signaling-server/: Cargo.toml
apps/signaling-server/migrations/: 0001_init.sql  0003_identity_signing_key.sql  0003_runtime_features.sql  0004_media_mailbox_sync.sql
apps/signaling-server/src/: main.rs  p2p_directory_store.rs
apps/signaling-server/src/domain/: models.rs
apps/signaling-server/src/repository/: mod.rs
apps/signaling-server/src/storage/: postgres_store.rs
docs/: architecture.md  platform_setup.md
signaling-server/: Cargo.toml  README.md
signaling-server/migrations/: 0002_e2ee_core.sql
signaling-server/src/: main.rs
signaling-server/src/domain/: models.rs
signaling-server/src/storage/: mod.rs  postgres_store.rs
(+2 files in other folders)
