[package]
name = "signaling-server"
version = "0.2.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.8", features = ["ws", "json", "macros"] }
tokio = { version = "1.50.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
futures = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
rand = "0.9.2"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "postgres", "json", "uuid", "chrono"] }
argon2 = "0.5.3"
password-hash = { version = "0.5.0", features = ["rand_core"] }
base64 = "0.22.1"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
chrono = { version = "0.4.42", features = ["serde", "clock"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }