[package]
name = "mayak_server"
version = "0.2.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.8", features = ["ws", "json"] }
tokio = { version = "1.50.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors"] }
futures = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
rand = "0.9.2"